refactor(InjectionProvider): 概念缺失，将 Component 和 Dependencies 使用 Injectable 封装
injectFields ➡️ 旧的再见